Fixed true and false response not working

--- a/graduationapp/package.json
+++ b/graduationapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graduationapp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "tar": "^6.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,8 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
