--- a/graduationapp/package.json
+++ b/graduationapp/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5"
+  },
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
